--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -19,13 +19,13 @@ header
                 li 
                     a(href="catalog.html") каталог
                 li 
-                    a(href="#spivpracia_container" data-target="spivpracia") співпраця
+                    a(href="index.html#spivpracia_container" data-target="spivpracia") співпраця
                 li 
-                    a(href="#delivery_container" data-target="delivery") оплата та доставка
+                    a(href="index.html#delivery_container" data-target="delivery") оплата та доставка
                 li 
-                    a(href="#obmin_container" data-target="obmin") повернення та обмін
+                    a(href="index.html#obmin_container" data-target="obmin") повернення та обмін
                 li 
-                    a(href="#contacts") контакти
+                    a(href="index.html#contacts") контакти
                 li.mobile_contacts 
                     a(href="tel:+3800676881050").items-center
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
